fix text-align center on intro state

--- a/styl/state-intro.styl
+++ b/styl/state-intro.styl
@@ -5,7 +5,6 @@
 ***********************************************************************/
 
 .state-intro
-  text-align center
 
   a:hover
     text-decoration none
@@ -28,8 +27,9 @@
     color #EBF0F0
     margin-bottom 55px
 
-  .links
+  .button-links
     margin-bottom 20px
+    text-align center
 
     a
       display block
@@ -74,6 +74,7 @@
     background -ms-linear-gradient(0deg, rgba(16, 160, 230, 1) 0%, rgba(218, 38, 46, 1) 100%)
 
   .stars-forks
+    text-align center
     font-family 'octicons'
     color white
     font-size 24px
@@ -90,6 +91,7 @@
       margin-right 10px
 
   .scroll-message
+    text-align center
 
     a
       color #10A0E6
